[tool.pdm]

[project]
name = "bfp"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Baltor", email = "fbaltor@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
