[tool.pdm]

[project]
name = "bfp"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Baltor", email = "fbaltor@gmail.com"},
]
dependencies = [
    "asks>=3.0.0",
    "trio>=0.22.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
